src/test/ui/infinite/infinite-macro-expansion.rs
macro_rules! recursive {
    () => (recursive!()) //~ ERROR recursion limit reached while expanding the macro `recursive`
}

fn main() {
    recursive!()
}
